apps/dawarich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dawarich
  labels:
    app.kubernetes.io/name: dawarich
