apps/dawarich/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich
  namespace: dawarich
  labels:
    app: dawarich
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: dawarich
